--- a/SearchEngine/pom.xml
+++ b/SearchEngine/pom.xml
@@ -24,6 +24,11 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>SearchEngine</finalName>
