--- a/SearchEngine/pom.xml
+++ b/SearchEngine/pom.xml
@@ -28,9 +28,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.33</version>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.1.0</version>
     </dependency>
   </dependencies>
 
